Remove unneccesary channel ids in config.json

--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,3 @@
 {
-    "prefix": ";;",
-    "guildId": "",
-    "sudoersRoleId": "848793950764138518",
-    "testAdminRoleId": "848955235362799656"
+    "prefix": ";;"
 }
