--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
         "@types/sqlite3": "^3.1.7",
         "discord.js": "^12.5.3",
         "dotenv": "^10.0.0",
+        "ms": "^2.1.3",
         "sqlite": "^4.0.23",
         "sqlite3": "^5.0.2",
         "typescript": "^4.3.2"
     },
     "devDependencies": {
+        "@types/ms": "^0.7.31",
         "@types/node": "^15.6.1",
         "@typescript-eslint/eslint-plugin": "^4.25.0",
         "@typescript-eslint/parser": "^4.25.0",
