--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "scripts": {
         "dev": "nodemon --exec ts-node src/index.ts",
         "clean": "rm -r build",
-        "db_init": "sqlite3 data.db < init.sql"
+        "db_init": "rm -f data.db && sqlite3 data.db < init.sql"
     }
 }
