--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "discord.js": "^12.5.3",
         "dotenv": "^10.0.0",
         "ms": "^2.1.3",
+        "pm2": "^5.1.0",
         "sqlite": "^4.0.23",
         "sqlite3": "^5.0.2",
         "typescript": "^4.3.2"
@@ -28,6 +29,10 @@
         "clean": "rm -rf build",
         "db_dev_init": "rm -f data.db && sqlite3 data.db < init.sql",
         "build": "tsc",
-        "db_prod_init": "rm -f data.db && sqlite3 build/data.db < init.sql"
+        "db_prod_init": "rm -f data.db && sqlite3 build/data.db < init.sql",
+        "start": "pm2 start build/src",
+        "stop": "pm2 stop build/src",
+        "logs": "pm2 logs src",
+        "monit": "pm2 monit src"
     }
 }
