--- a/config.template.json
+++ b/config.template.json
@@ -2,5 +2,6 @@
     "prefix": "",
     "bot_token": "",
     "userRoleId": "",
-    "mutedRoleId": ""
+    "mutedRoleId": "",
+    "welcomeChannelId": ""
 }
