Make log channel
Send message and reaction logs to the log channel
And upgrade the package (yarn upgrade)

--- a/config.template.json
+++ b/config.template.json
@@ -3,5 +3,6 @@
     "bot_token": "",
     "userRoleId": "",
     "mutedRoleId": "",
-    "welcomeChannelId": ""
+    "welcomeChannelId": "",
+    "logChannelId": ""
 }
