Edit pm2 scripts

--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
         "db_dev_init": "rm -f data.db && sqlite3 data.db < init.sql",
         "build": "tsc",
         "db_prod_init": "rm -f data.db && sqlite3 build/data.db < init.sql",
-        "start": "pm2 start build/src",
-        "stop": "pm2 stop build/src",
-        "logs": "pm2 logs src",
-        "monit": "pm2 monit src"
+        "start": "pm2 start build/src --name ngc5195",
+        "stop": "pm2 stop ngc5195",
+        "logs": "pm2 logs ngc5195",
+        "monit": "pm2 monit ngc5195"
     }
 }
