Make Eval command

--- a/config.template.json
+++ b/config.template.json
@@ -4,5 +4,6 @@
     "userRoleId": "",
     "mutedRoleId": "",
     "welcomeChannelId": "",
-    "logChannelId": ""
+    "logChannelId": "",
+    "ownerID": ""
 }
