Edit config template json

--- a/config.template.json
+++ b/config.template.json
@@ -2,7 +2,7 @@
     "prefix": "",
     "bot_token": "",
     "userRoleId": "",
-    "welcomeChannelId": "",
-    "logChannelId": "",
+    "welcomeChannelId": { "": "" },
+    "logChannelId": { "": "" },
     "ownerID": ""
 }
